--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,6 @@ buildNumber.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 
+logs/
 .idea/
 *.iml
