--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,13 +3,17 @@ services:
   jersey:
     build:
       context: .
+    restart: always
     ports:
       - '8080:8080'
     volumes:
-    - .:/app
+      - /app/target
+      - .:/app
     environment:
       - MYSQL_PASSWORD=jersey
       - LOG_LEVEL=DEBUG
+    depends_on:
+      - mysqlserver
     command: ./mvnw exec:java
 
   mysqlserver:
